--- a/src/app/pages/auth/registro/registro.page.html
+++ b/src/app/pages/auth/registro/registro.page.html
@@ -80,6 +80,39 @@
         
       </div>
 
+      <app-custom-input
+      icon="lock-closed-outline" 
+      [control]="form.controls.confirmPass" 
+      type="password"
+      label="Confirmar password"
+      ></app-custom-input>
+
+      
+
+      <!-- Agrega este bloque donde quieras mostrar mensajes de error -->
+      <div class="validators" *ngIf="form.controls.confirmPass.errors && form.controls.confirmPass.touched">
+
+        <!-- Mensaje de error para contraseña requerida -->
+        <div *ngIf="form.controls.confirmPass.errors?.['required']">
+          <ion-item>
+            <ion-icon slot="start" name="close-outline" color="danger" size="small"></ion-icon> 
+            <ion-text color="danger">
+              <p class="m_error">Debes ingresar una contraseña</p>
+            </ion-text>
+          </ion-item>
+        </div>        
+
+      </div>
+
+      <div *ngIf="form.hasError('coincidirCampos')">
+        <ion-item>
+          <ion-icon slot="start" name="close-outline" color="danger" size="small"></ion-icon> 
+          <ion-text color="danger">
+            <p class="m_error">Las contraseñas no coinciden</p>
+          </ion-text>
+        </ion-item>
+      </div>
+
       <ion-button  expand="block" mode="ios" class="submit" type="submit" [disabled]="form.invalid">
         Registrate
         <ion-icon slot="start" class="icon-btn" name="person-add-outline"></ion-icon>
