Se agrega el generador de qr de prueba se crean las paginas asistencia alumno, asistencia profesor, generar qr, editcuenta de profesor  y se agregan restriccion de ingreso en todas ellas.

--- a/src/app/pages/main/home-estudiante/home-estudiante.page.html
+++ b/src/app/pages/main/home-estudiante/home-estudiante.page.html
@@ -6,4 +6,7 @@
       <ion-title size="large">home</ion-title>
     </ion-toolbar>
   </ion-header>
+
+  <app-custom-btn routerLink="/asistencia-alumno" nameBtn="calendar-outline" label="Ver mi asistencia"></app-custom-btn>
+
 </ion-content>
