--- a/src/app/pages/main/home/home.page.html
+++ b/src/app/pages/main/home/home.page.html
@@ -1,9 +1,26 @@
-<app-header backButton="/auth" title="Home - Profesor"></app-header>
+<app-header disabled="false" title="Home - Profesor">
+</app-header>
 
 <ion-content [fullscreen]="true">
-  <ion-header collapse="condense">
-    <ion-toolbar>
-      <ion-title size="large">home</ion-title>
-    </ion-toolbar>
-  </ion-header>
+  <ion-card>
+    <ion-card-content>
+      <ion-list>
+        <ion-item>
+          <ion-thumbnail slot="start">
+            <img alt="Silhouette of mountains" src="https://ionicframework.com/docs/img/demos/thumbnail.svg" />
+          </ion-thumbnail>
+          <ion-label><a routerLink="/edit-cuenta"><h1>{{nombre}}</h1></a>
+            <h2>{{email}}</h2>
+          </ion-label>
+        </ion-item>
+      </ion-list>
+    </ion-card-content>
+  </ion-card>
+
+
+
+
+  <app-custom-btn routerLink="/asistencia-profesor" nameBtn="calendar-outline" label="Ver asistencia de alumnos"></app-custom-btn>
+  <app-custom-btn routerLink="/generar-qr" nameBtn="qr-code-outline" label="Generar QR"></app-custom-btn>
+
 </ion-content>
