--- a/src/app/shared/components/header/header.component.html
+++ b/src/app/shared/components/header/header.component.html
@@ -1,8 +1,14 @@
 <ion-header class="ion-no-border">
   <ion-toolbar color="primary">
 
-<ion-buttons slot="start">
+<ion-buttons slot="start" >
   <ion-back-button *ngIf="backButton" [defaultHref]="backButton"></ion-back-button>
+</ion-buttons>
+
+<ion-buttons slot="end">
+  <ion-button *ngIf="disabled" [disabled]="disabled" (click)="logOut()" >
+      <ion-icon slot="icon-only" name="log-out"></ion-icon>
+  </ion-button>
 </ion-buttons>
 
     <ion-title>
