--- a/src/app/pages/alumno/asistencia-alumno/asistencia-alumno.page.html
+++ b/src/app/pages/alumno/asistencia-alumno/asistencia-alumno.page.html
@@ -1,9 +1,29 @@
-<app-header backButton="/home-estudiante" title="Asistencia estudiante"></app-header>
+<app-header backButton="main/home-estudiante" title="Asistencia estudiante"></app-header>
 
 <ion-content [fullscreen]="true">
-  <ion-header collapse="condense">
-    <ion-toolbar>
-      <ion-title size="large">home</ion-title>
-    </ion-toolbar>
-  </ion-header>
+  
+  <ion-card>
+    <ion-card-content>
+      <ion-list>
+        <ion-item>
+          <ion-label><h2>-- NOMBRE DEL RAMO --</h2>
+            <h3>-- ASIST --</h3>
+          </ion-label>
+        </ion-item>
+      </ion-list>
+    </ion-card-content>
+  </ion-card>
+
+  <ion-card>
+    <ion-card-content>
+      <ion-list>
+        <ion-item>
+          <ion-label><h2>-- NOMBRE DEL RAMO --</h2>
+            <h3>-- ASIST --</h3>
+          </ion-label>
+        </ion-item>
+      </ion-list>
+    </ion-card-content>
+  </ion-card>
+
 </ion-content>
