--- a/src/app/pages/main/home-estudiante/home-estudiante.page.html
+++ b/src/app/pages/main/home-estudiante/home-estudiante.page.html
@@ -1,12 +1,51 @@
-<app-header backButton="/auth" title="Home - Estudiante"></app-header>
+<app-header disabled="false" title="Home - Estudiante">
+</app-header>
 
 <ion-content [fullscreen]="true">
-  <ion-header collapse="condense">
-    <ion-toolbar>
-      <ion-title size="large">home</ion-title>
-    </ion-toolbar>
-  </ion-header>
+  <ion-card>
+    <ion-card-content>
+      <ion-list>
+        <ion-item>
+          <ion-thumbnail slot="start">
+            <img alt="Silhouette of mountains" src="https://ionicframework.com/docs/img/demos/thumbnail.svg" />
+          </ion-thumbnail>
+          <ion-label><a routerLink="/edit-estudiante"><h1>{{nombre}}</h1></a>
+            <h2>{{email}}</h2>
+          </ion-label>
+        </ion-item>
+      </ion-list>
+    </ion-card-content>
+  </ion-card>
 
-  <app-custom-btn routerLink="/asistencia-alumno" nameBtn="calendar-outline" label="Ver mi asistencia"></app-custom-btn>
+  <h2 class="label-home">Clase en curso</h2>
+
+  <ion-card>
+    <ion-card-content>
+      <ion-list>
+        <ion-item>
+          <ion-label><h2>-- NOMBRE DEL RAMO --</h2>
+            <h3>-- ASIST --</h3>
+          </ion-label>
+        </ion-item>
+        <ion-button color="success" routerLink="/scan-qr">Registrar mi asistencia</ion-button>
+      </ion-list>
+    </ion-card-content>
+  </ion-card>
+
+  <h2 class="label-home">Próxima clase</h2>
+
+  <ion-card>
+    <ion-card-content>
+      <ion-list>
+        <ion-item>
+          <ion-label><h2>-- NOMBRE DEL RAMO --</h2>
+            <h3>-- ASIST --</h3>
+          </ion-label>
+        </ion-item>
+      </ion-list>
+    </ion-card-content>
+  </ion-card>
+
+  <app-custom-btn routerLink="/asistencia-alumno" nameBtn="calendar-outline" label="Ver mi asistencias"></app-custom-btn>
 
 </ion-content>
