--- a/src/app/pages/profesor/asistencia-profesor/asistencia-profesor.page.html
+++ b/src/app/pages/profesor/asistencia-profesor/asistencia-profesor.page.html
@@ -1,9 +1,19 @@
 <app-header backButton="/main/home" title="Asistencia de alumnos"></app-header>
 
-<ion-content [fullscreen]="true">
-  <ion-header collapse="condense">
-    <ion-toolbar>
-      <ion-title size="large">Asistencia-mis-alumnos</ion-title>
-    </ion-toolbar>
-  </ion-header>
+<ion-content>
+
+  <ion-card *ngFor="let seccion of secciones">
+    <ion-card-header>
+      {{ seccion.id_seccion }}
+    </ion-card-header>
+    <ion-card-content>
+      Código sección: {{ seccion.id_ramo }}
+    <ion-tab-button (click)="verAlumnos(seccion.id_seccion)">
+      <ion-icon name="list-circle-outline"></ion-icon>
+      <ion-label>alumnos</ion-label>
+    </ion-tab-button>
+    </ion-card-content>
+    
+  </ion-card>
+
 </ion-content>
