--- a/src/app/pages/main/home/home.page.html
+++ b/src/app/pages/main/home/home.page.html
@@ -53,5 +53,10 @@
 
   </ion-list>
 
+  <ion-button routerLink="/main/home">
+    <ion-icon name="refresh-circle-outline"></ion-icon>
+    <ion-label>Refresh</ion-label>
+  </ion-button>
+
 
 </ion-content>
