--- a/src/app/pages/main/home/home.page.html
+++ b/src/app/pages/main/home/home.page.html
@@ -53,7 +53,7 @@
 
   </ion-list>
 
-  <ion-button routerLink="/main/home">
+  <ion-button (click)="refreshPage()">
     <ion-icon name="refresh-circle-outline"></ion-icon>
     <ion-label>Refresh</ion-label>
   </ion-button>
